<resources>
    <string name="app_name">MyPlaces2</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="select_current_location">SELECT CURRENT LOCATION</string>
    <string name="select_image">Select image</string>
    <string name="save">SAVE</string>
    <string name="no_places_added">No Places Added.</string>
    <string name="view_on_map">View on Map</string>
    <string name="google_maps_api_key">AIzaSyAR-LsiUo94BgJkk7Jilf1JnFJ2bBxdEcI</string>
</resources>